[package]
name = "fast_cors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.21"
actix-cors = "0.6.0-beta.8"

serde_json = "1.0.79"

reqwest = { version = "0.11.9", features = ["json"] }
